# conversational_bot_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sample_conversation.txt
chatapp/: apps.py  container.py  urls.py
chatapp/application/: create_conversation_summary_use_case.py  create_conversation_use_case.py  process_message_audio_use_case.py  process_message_use_case.py
chatapp/domain/entities/: conversation.py  message.py  user.py
chatapp/domain/exceptions/: bad_request.py  domain_error.py  forbidden_error.py  internal_error.py  not_found_error.py  validation_error.py
chatapp/domain/models/: create_conversation_input.py  create_message_input.py  llm_message_model.py
chatapp/domain/repositories/: conversation_repository.py  message_repository.py  user_repository.py
chatapp/domain/services/: llm_service.py  rag_retrieve_service.py
chatapp/infrastructure/api/: exception_handler.py
chatapp/infrastructure/controllers/: conversation_audio_view.py  conversation_view.py  create_conversation_summary_view.py  create_conversation_view.py
chatapp/infrastructure/dtos/: create_conversation_dto.py  send_message_dto.py
chatapp/infrastructure/models/: __init__.py  conversation_db.py  document_db.py  message_db.py  (+3 more)
chatapp/tests/: test_create_conversation_summary_use_case.py  test_create_conversation_use_case.py  test_process_message_use_case.py
config/: settings.py  urls.py
docs/: policies.txt
environments/: .env.example
ui/: config.py  main.py  models.py
ui/services/: api_client.py
(+12 files in other folders)
